# clash-royale-war-stats

./: Cargo.toml  LICENSE  README.md  todo.txt
src/: Handler.rs  config.json  config.rs  date_calculator.rs  db.rs  handler.rs  main.rs  parser.rs  person.rs  responder.rs  royale_api.rs
src/models/: clan.rs  item.rs  mod.rs  period_log.rs  river_race.rs
src/models/current_riverrace/: clan.rs  item.rs  mini_clan.rs  participants.rs  period_log.rs  river_race.rs
src/models/past_riverrace/: after.rs  clan.rs  cursor.rs  last_riverraces.rs  mod.rs  riverrace_log.rs  riverrace_log_entry.rs  standing.rs
src/www/: index.html
src/www/css/: dashboard.css  help.css  main.css  scores.css
src/www/pages/: dashboard.html  help.html  scores.html
src/www/scripts/: main.js  scores.js
